<resources>
    <string name="facebook_app_id">287973501627698</string>
    <string name="kakao_app_key">c166da129dac875e35fa767a08f3c0fb</string>
    <string name="naver_client_id">FavhMGXhU3BUSy7Xs3PK</string>
    <string name="naver_client_secret">MDKMaaq9BR</string>
    <string name="naver_client_name">내옆에</string>
    <string name="daum_map_key">fdc23d4726cd2099b3f2a94f24ce88aa</string>
    <string name="app_name">내옆에</string>
    <string name="register_info">추가정보는 선택사항입니다</string>
    <string name="register_pic">반려동물 사진</string>
    <string name="register_species">반려동물 종류</string>
    <string name="register_birth">반려동물 생일</string>
    <string name="register_complete">완료</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="join_select_species">반려동물 종류를 선택해주세요</string>
    <string name="join_select_birth">반려동물 생일을 선택해주세요</string>
    <string name="splash_subtitle">당신의 반쪽을 위한 현명한 선택</string>
    <string name="splash_title">내여PET</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="main_hospital">병원</string>
    <string name="main_beauty">미용</string>
    <string name="main_hotel">호텔</string>
    <string name="main_tool">용품</string>
    <string name="main_cafe">카페</string>
    <string name="main_funeral">장례</string>
    <string name="main_adopt">분양</string>
    <string name="main_report">신고</string>
    <string name="main_noti">공고</string>
    <string name="main_insure">펫 보험 알아보기</string>
    <string name="join_title">추가정보</string>
    <string name="join_done">완료</string>
    <string name="join_age_done">완료</string>
    <string name="diary_write_done">완료</string>
    <string name="diary_title">반려동물 일지</string>
    <string name="diary_write_title">일지 쓰기</string>
    <string name="nav_insure">보험금 접수</string>
    <string name="nav_diary">반려동물 일지</string>
    <string name="nav_info">추가정보 작성</string>
    <string name="nav_my_write">등록 글 관리</string>
    <string name="nav_share">마이펫+ 추천하기</string>
    <string name="nav_inquiry">문의하기</string>
    <string name="nav_notice">이벤트 및 공지사항</string>
    <string name="nav_setting">설정</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="date">일</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_hospital_detail">HospitalDetailActivity</string>
    <string name="title_activity_hospital_map">HospitalMapActivity</string>
    <string name="title_activity_adopt_detail">AdoptDetailActivity</string>
    <string name="title_activity_mating">MatingActivity</string>
    <string name="title_activity_mating_request">MatingRequestActivity</string>
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="title_activity_announce">AnnounceActivity</string>
    <string name="title_activity_insure_info">InsureInfoActivity</string>
    <string name="title_activity_assured_damage">AssuredDamageActivity</string>
    <string name="title_activity_not_assured">NotAssuredActivity</string>
    <string name="title_activity_price_sample">PriceSampleActivity</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_insure_register">InsureRegisterActivity</string>
    <string name="title_activity_receipt_insure">ReceiptInsureActivity</string>
    <string name="title_activity_inquiry">InquiryActivity</string>
    <string name="title_activity_missing_detail">MissingDetailActivity</string>
    <string name="title_activity_report_write">ReportWriteActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="terms_content">In today’s net-savvy world it has become common for any business to have a website which they use mostly for advertising their products and services. With the advent of search engines it has become even easier for the customers to search for the stuff online. For a website to be successful its link should land in the first three pages which the search engine brings and the rank of the page should be high which means many visitors come to the site. This can be achieved by applying search engine optimization or popularly known as SEO. This is a marketing strategy which increases the quality and quantity of traffic flow to a particular website via search engines. SEO not only affects the search engine results, but also image search, video search and industry specific vertical search engines. It determines how a search algorithm functions and searches what is popular with people. When a website link is submitted to a search engine, a spider crawls through a page to gather links which lead to other pages and stores those pages on the server of the search engine. The information collected from these pages is sent to the indexer, whose job is to extract information from those pages such as the keywords and their weights, the location of the page and other links that are stored for the spider to crawl in future. In the beginning, the search engine optimizer algorithms were dependant on the keywords, Meta tags, and index files provided by the Webmaster. Meta tags provided information about a particular page, but using them for indexing the pages didn’t prove to be successful as some Webmasters added irrelevant Meta tags to increase the number of hits and earn huge ad revenue. They even changed the HTML of the web pages to achieve a good rank for the page. But this was a case of abuse as it fetched irrelevant pages.  Search engines then began utilizing complex ranking algorithm, which were difficult for the webmasters to manipulate so as to provide web surfers with genuine results. The rank of the web page was calculated mathematically by functions using strength and quantity of the inbound links. The higher the rank of the page the more chances it had to be viewed by a person. Later algorithms were developed which considered various other on-page factors such as rank and off-page factors such as hyperlink. Since the webmasters couldn’t manipulate the page rank, they began exchanging, selling and buying links, which lead to link spamming and even creation of numerous sites dedicated for this purpose. Algorithms became more complex by every passing day and top search engines kept their algorithms a secret. As the cost of SEO increased, advertisers were roped in to pay for it, which finally resulted in high quality web pages. Although investing in SEO is very fruitful, but at the same time is risky because with out any prior notice the algorithms being used are bound to change and the search engine will stop directing visitors to the page. Many consultants are available in the market that provides SEO services. They manipulate the HTML source code of the web site like menus, shopping carts and sometimes even the content of the website to draw more traffic. Search engines like Yahoo has algorithms that extract pages not according to the page rank but according to the cost per click or set fee, that is if a advertiser desires that the page containing his ad be displayed, he is expected to pay money for it. This is a point of controversy, as only the big businesses will be able to increase the number of hits of their page but not the small business who might be having a better quality page.Google Ad Words explores ads which have words typed in the search box by the surfer. The Million Dollar Homepage started the concept of Pixel advertising, which is a graphical kind of advertising. Depending on the pixels, the space is sold to the advertiser. Keyword advertising involves advertisers who buy URLs of a site and place their ads at that location. Thus SEO is a market in its own which is yielding great results for businesses on Internet.</string>
    <string name="title_activity_my_post">MyPostActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_notice_detail">NoticeDetailActivity</string>
</resources>