<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/joinBg"
    android:paddingBottom="17dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="22dp"
    tools:context="petcare.com.mypetcare.Activity.JoinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPetInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_info"
            android:textColor="@color/optionFont"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPetPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/register_pic"
            android:textColor="@color/joinDefaultFont"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/svPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPic1"
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo" />

            <ImageView
                android:id="@+id/ivPic2"
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo" />

            <ImageView
                android:id="@+id/ivPic3"
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPetSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_species"
            android:textColor="@color/joinDefaultFont"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btPetSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dropbox"
            android:text="@string/join_select_species"
            android:textColor="@color/spinnerFont" />

        <TextView
            android:id="@+id/tvPetBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_birth"
            android:textColor="@color/joinDefaultFont"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btPetBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dropbox"
            android:text="@string/join_select_birth"
            android:textColor="@color/spinnerFont" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@color/colorPrimary"
        android:text="@string/register_complete"
        android:textColor="@color/joinDoneBtnFont"
        android:textSize="16sp" />
</RelativeLayout>
