<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:minWidth="280dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_popup_age_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/register_birth"
        android:textColor="@color/normalFont"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/np_popup_age_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/normalFont"
            android:textSize="16dp" />

        <NumberPicker
            android:id="@+id/np_popup_age_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/normalFont"
            android:textSize="16dp" />

        <NumberPicker
            android:id="@+id/np_popup_age_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/normalFont"
            android:textSize="16dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/silverLine" />

    <Button
        android:id="@+id/bt_popup_age_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/transparent"
        android:text="@string/join_age_done"
        android:textColor="@color/normalFont"
        android:textSize="16sp" />
</LinearLayout>